--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,10 @@ megatron_output/
 /*-mcore/
 /*-hf/
 /*_cached_dataset/
-
+/model_config/
+/datasets/
+/shells/
+srun.sh
 # Pytorch
 *.pth
 *.pt
